feat: Added a hidden nav items to the bar

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 			<div class="navbar-brand">
 				<a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
 			</div>
+			<div class="nav-main hidden">
+				|
+				<a class="nav-link" id="nav-submit">submit</a>
+				|
+				<a class="nav-link" id="nav-favorites">favorites</a>
+				|
+				<a class="nav-link" id="nav-myStoies">My Stories</a>
+			</div>
 			<div class="nav-right">
 				<a class="nav-link" href="#" id="nav-login">login/signup</a>
 				<a class="nav-link" href="#" id="nav-user-profile"></a>
